--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@awesome-cordova-plugins/core": "6.2.0",
     "@awesome-cordova-plugins/document-viewer": "^5.46.0",
     "@awesome-cordova-plugins/file": "^5.46.0",
     "@awesome-cordova-plugins/file-transfer": "^5.46.0",
@@ -39,6 +40,7 @@
     "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-whitelist": "1.3.5",
     "enhanced-resolve": "^5.10.0",
     "ionicons": "^6.0.3",
     "ng2-search-filter": "^0.5.1",
@@ -65,6 +67,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "cordova-res": "0.15.4",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
