--- a/backend/buildfiles/.env
+++ b/backend/buildfiles/.env
@@ -43,15 +43,15 @@
 # username = medikafu_gackonu111
 # password = 9!r9iq4U0
 
- database.default.hostname = localhost
- database.default.database = referral_med
- database.default.username = root
- database.default.password = 
+ # database.default.hostname = localhost
+ # database.default.database = referral_med
+ # database.default.username = root
+ # database.default.password = 
  
-#  database.default.hostname = localhost
-#  database.default.database = medikafu_reef_med
-#  database.default.username = medikafu_gackonu111
-#  database.default.password = 9!r9iq4U0
+  database.default.hostname = localhost
+  database.default.database = medikafu_reef_med
+  database.default.username = medikafu_gackonu111
+  database.default.password = 9!r9iq4U0
 
 
 
@@ -152,5 +152,5 @@
 # curlrequest.shareOptions = true
 
 JWT_SECRET = 'ReferralMed'
-frontendurl = 'http://localhost:4200'
-SENDGRID_API_KEY = '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'
+# frontendurl = 'http://localhost:4201'
+frontendurl = 'https://reefapp.xyz'
